﻿PbootCMS V1.1.6 build 2018-07-20
1、优化编辑器配置及安全加固;
2、优化内容管理列表布局；
3、增强系统后台及标签解析引擎安全性；
4、调整runtime标签展示方式；
5、新增Gzip页面压缩功能及后台开关；
6、新增支持根目录定义404.html匹配错误URL访问；
7、新增缩略图自动缩放更小图功能；
8、新增config/route.php文件里定义路由规则的支持；
9、新增调用指定栏目 标签scode支持多个分类；
10、新增如果栏目及内容关键字标签为空时自动使用全局关键字；
11、新增如果栏目及内容描述标签为空时自动使用全局描述；
12、新增全局自动页面标题标签{pboot:pagetitle}；
13、新增全局自动页面关键字标签{pboot:pagekeywords}；
14、新增全局自动页面描述标签{pboot:pagedescription}
15、新增留言表单添加更多字段的支持；
16、新增幻灯片、友情链接、扩展字段排序的支持；
17、新增sitemap生成，读取地址/index.php/sitemap；
18、新增URL路径支持中文；
19、新增中文用户名登陆的支持；
20、新增API正文内容返回图片路径自动添加网址路径；
21、新增邮件配置中发送测试邮件功能；
22、其他问题修复与优化；
注意：升级到此版本需要同时升级数据库，脚本见升级包中。

PbootCMS V1.1.5 build 2018-07-10
1、修复开启静态缓存后无法切换语言问题；
2、修复开启静态缓存后无法自动切换手机版；
3、修复数据库安全检查不准问题；
4、修复后台多选字段无法取消问题；
5、新增调试模式后台开关；
6、新增访问地址不存在时404状态信息；
7、新增运行时间标签{pboot:runtime}；
8、新增留言验证码判断标签{pboot:checkcodestatus}；
9、新增筛选全部按钮的class和active分别设置；
10、新增类似filter=title|php,asp多条件过滤支持；
11、新增搜索列表scode、field调节控制参数支持；
12、新增任意字段搜索及综合搜索支持；
13、新增列表零开头序号标签[list:n];
14、新增loop循环语句标签；
15、新增模型字段下拉选择类型；
16、优化内容页访问量代码插入方式；
17、优化会话文件处理方式；
18、优化框架模板解析引擎；
19、优化后台单页数据读取方式；
20、优化系统配置载入方式；
21、优化API数据读取；

PbootCMS V1.1.4 build 2018-06-25
1、修复自定义表单表名重复仍然添加成功问题；
2、修复分享到微信导致页面错误的问题；
3、修复静态缓存失效问题并提高缓存效果;
4、新增多条件筛选时多选类型支持；
5、新增全站多条件筛选的支持；
6、新增登陆时数据库目录写入权限判断提示；
7、新增后台开启高速静态缓存功能；
8、新增后台填写授权码功能；
9、新增指定列表scode使用逗号调用多个分类功能；
10、新增{pboot:keyword}标签；
11、新增数据库安全提示及修改功能；

PbootCMS V1.1.3 build 2018-06-15
1、优化Sqlite查询过程高并发锁死问题；
2、优化编辑器配置；
3、优化标签参数获取方法；
4、修复部分环境截取描述文本出现乱码问题；
5、修复API搜索数据获取方式错误；
6、新增API获取指定分类子类接口;
7、新增多条件筛选功能；
8、新增无缩略图时自动调用默认图功能；
9、新增上下篇标签参数notext定义"没有了"文本；
10、新增内容管理复制和移动功能；

PbootCMS V1.1.2 build 2018-06-12
1、修复httpurl非标准端口时解析错误；
2、修复内容为空时提取描述报警告问题；
3、修复非根目录情况下图片路径使用IF判断不准问题；
4、修复授权码带空格时导致无法正常匹配问题；
5、修复数据库中存在乱码时读取异常问题；
6、修复面包屑不显示当前分类的问题;
7、修复API中数据调用的一些错误；
8、新增表单数据删除功能；
9、新增栏目自定义路径名称功能；
10、新增留言和自定义表单提交API；

PbootCMS V1.1.1 build 2018-06-03
1、更新Layui到最新版本；
2、修复表备份无数据时处理错误；
3、优化添加自定义字段数据库处理方式；
4、修复修改模型时类型默认不选中问题;
5、修复在单页面多次调用面包屑数据重复问题；
6、修复访客留言不显示问题；
7、新增删除栏目时彻底删除本类及子类内容；
8、修复单页预览按钮地址错误；