@@ -1,4 +1,4 @@
-﻿PbootCMS V1.1.6 build 2018-07-20
+﻿PbootCMS V1.1.6 build 2018-07-21
 1、优化编辑器配置及安全加固;
 2、优化内容管理列表布局；
 3、增强系统后台及标签解析引擎安全性；
@@ -20,7 +20,8 @@
 19、新增中文用户名登陆的支持；
 20、新增API正文内容返回图片路径自动添加网址路径；
 21、新增邮件配置中发送测试邮件功能；
-22、其他问题修复与优化；
+22、新增API调用自定义表单数据接口；
+23、其他问题修复与优化；
 注意：升级到此版本需要同时升级数据库，脚本见升级包中。
 
 PbootCMS V1.1.5 build 2018-07-10
